tests/linear/should_fail/LinearKind.hs
{-# LANGUAGE LinearTypes, KindSignatures #-}
module LinearKind where

data A :: * %1 -> *
